chore(page): create basic rooms and sale_items collection logic

--- a/rooms.html
+++ b/rooms.html
@@ -1,3 +1,14 @@
+---
+layout: rooms
+title: 房型展示
+landing-title: '房型展示'
+nav-menu: true
+description: null
+image: null
+author: null
+show_tile: true
+---
+
 <!DOCTYPE html>
 <!--
     Forty by HTML5 UP
@@ -29,3 +40,4 @@
     {% include footer.html %}
   </body>
 </html>
+
