chore(info): create info pages basic logic

--- a/landing.html
+++ b/landing.html
@@ -1,66 +1,91 @@
 ---
 title: 關於密式
-layout: landing
 description: '密式旅行，屬於你的秘密景點'
 image: 
 nav-menu: true
 ---
 
-<!-- Main -->
-<div id="main">
-	<!-- Two -->
-	<section id="two" class="spotlights">
-		<section>
-			<a href="generic.html" class="image">
-				<img src="{% link assets/images/pic08.jpg %}" alt="" data-position="center center" />
-			</a>
-			<div class="content">
+<!DOCTYPE html>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  {% include head.html %}
+	<body>
+		{% include header.html %}
+			<section id="banner" class="style2">
 				<div class="inner">
+					<span class="image">
+						<img src="{{ site.baseurl }}/{{ page.image }}" alt="">
+					</span>
 					<header class="major">
-						<h3>密式小木屋</h3>
+						<h1>{{ page.title }}</h1>
 					</header>
-					<p></p>
+					<div class="content">
+						{{ page.description }}
+					</div>
 				</div>
+			</section>
+    <!-- Main -->
+			<div id="main">
+				<!-- Two -->
+				<section id="two" class="spotlights">
+					<section>
+						<a href="generic.html" class="image">
+							<img src="{% link assets/images/pic08.jpg %}" alt="" data-position="center center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>密式小木屋</h3>
+								</header>
+								<p></p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="generic.html" class="image">
+							<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>桌遊咖啡廳</h3>
+								</header>
+								<p></p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="generic.html" class="image">
+							<img src="{% link assets/images/pic10.jpg %}" alt="" data-position="25% 25%" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>密式遊戲室</h3>
+								</header>
+								<p></p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="generic.html" class="image">
+							<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>密式多肉小舖</h3>
+								</header>
+								<p></p>
+							</div>
+						</div>
+					</section>
+				</section>
 			</div>
-		</section>
-		<section>
-			<a href="generic.html" class="image">
-				<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
-			</a>
-			<div class="content">
-				<div class="inner">
-					<header class="major">
-						<h3>桌遊咖啡廳</h3>
-					</header>
-					<p></p>
-				</div>
-			</div>
-		</section>
-		<section>
-			<a href="generic.html" class="image">
-				<img src="{% link assets/images/pic10.jpg %}" alt="" data-position="25% 25%" />
-			</a>
-			<div class="content">
-				<div class="inner">
-					<header class="major">
-						<h3>密式遊戲室</h3>
-					</header>
-					<p></p>
-				</div>
-			</div>
-		</section>
-		<section>
-			<a href="generic.html" class="image">
-				<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
-			</a>
-			<div class="content">
-				<div class="inner">
-					<header class="major">
-						<h3>密式多肉小舖</h3>
-					</header>
-					<p></p>
-				</div>
-			</div>
-		</section>
-	</section>
-</div>
+    {% include footer.html %}
+	</body>
+</html>
