chore(infoPage): create menu info page

--- a/_infos/2022-10-06-map.html
+++ b/_infos/2022-10-06-map.html
@@ -4,5 +4,6 @@ title: 園區地圖
 description: 
 image: 
 ---
-
-<img src="{% link assets/images/map.jpeg %}" alt="">
+<div class="text-center">
+  <span class="image fit"><img src="{% link assets/images/map.jpeg %}" alt=""></span>
+</div>
