--- a/landing.html
+++ b/landing.html
@@ -1,7 +1,7 @@
 ---
 title: 關於密式
 description: '密式旅行，屬於你的秘密景點'
-image: 
+image: assets/images/landing_banner.jpg
 nav-menu: true
 ---
 
@@ -39,54 +39,84 @@ nav-menu: true
 				<!-- Two -->
 				<section id="two" class="spotlights">
 					<section>
-						<a href="generic.html" class="image">
-							<img src="{% link assets/images/pic08.jpg %}" alt="" data-position="center center" />
-						</a>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_1.jpg %}" alt="" data-position="center center" />
+						</span>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
 									<h3>密式小木屋</h3>
 								</header>
-								<p></p>
+								<p>入住密式小木屋，在房內眺出就可以將泰安山景盡收眼底，房內沒有多餘的擺設，可以讓您完全的沉靜下來，靜下心來看本書，或者只是單純的想事情，等您發現時，夕陽已經染紅了整片山頭。</p>
+								<p>就算不搭帳篷，也可以在平台上享受夜晚的寧靜，水聲潺潺流過，蟲鳴鳥叫貓頭鷹，銀河流星月亮，彷彿就在你耳邊低語。</p>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
-							<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
-						</a>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_2.jpg %}" alt="" data-position="top center" />
+						</span>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>桌遊咖啡廳</h3>
+									<h3>密式露營區</h3>
 								</header>
-								<p></p>
+								<p>密式露營區，採小包區形式，地形落差大，平望出去即可看清整座山，三面環山彷彿置身山林中心，每到夕陽西下之時，夕陽的餘暉灑滿了整片山頭，抹紅一片山嵐，暖紅色的光芒慢慢地跟著它爬到遠處，直到它沒入遠方的山頭。</p>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
-							<img src="{% link assets/images/pic10.jpg %}" alt="" data-position="25% 25%" />
-						</a>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_3.jpg %}" alt="" data-position="25% 25%" />
+						</span>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>密式桌遊咖啡廳</h3>
+								</header>
+								<p>密式咖啡廳，提供上百種桌遊給旅客遊玩，並且在現場提供桌遊教學服務。即使不玩遊戲，在夕陽西下的時候點杯咖啡，靜靜的享受夜幕的降臨也是別有一番風味。</p>
+								<p>房客假日教學時間： 09:00 ~ 10:30 、 15:00 ~ 17:00 、 20:00 ~ 21:30 </br>房客假日點餐時間： 08:00 ~ 21:00</br>咖啡廳訪客開放時間： 10:00 ~ 17:00</br>平日請洽營主 <span style="color: #FFD306">適合年齡： 5 歲以上</span></p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_4.jpeg %}" alt="" data-position="top center" />
+						</span>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
 									<h3>密式遊戲室</h3>
 								</header>
-								<p></p>
+								<p>密式遊戲式提供多種兒童玩具，並且開放旅客免費遊玩，遊戲室由木頭建成，室內開放冷氣，即使天氣不佳小朋友也不怕沒地方去，另小營主可能隨機出沒&#127775;</p>
+								<p>房客假日開放時間： 09:00 ~ 21:30</br>平日請洽營主</br><span style="color: #FFD306">適合年齡： 8 歲以下</span></p>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
-							<img src="{% link assets/images/pic09.jpg %}" alt="" data-position="top center" />
-						</a>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_5.jpg %}" alt="" data-position="25% 25%" />
+						</span>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
 									<h3>密式多肉小舖</h3>
 								</header>
 								<p></p>
+							</div>
+						</div>
+					</section>
+					<section>
+						<span class="image">
+							<img src="{% link assets/images/landing_img_6.jpg %}" alt="" data-position="top center" />
+						</span>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>密式沙坑</h3>
+								</header>
+								<p>密式沙坑由木頭建成，在裡頭填滿了白沙，提供到訪的小小朋友一個戶外的放電場所。</p>
+								<p>房客假日開放時間： 09:00 ~ 21:30</br>平日請洽營主</br><span style="color: #FFD306">適合年齡： 5 歲以下</span></p>
 							</div>
 						</div>
 					</section>
