chore(landing): update landing page

--- a/landing.html
+++ b/landing.html
@@ -49,6 +49,7 @@ nav-menu: true
 								</header>
 								<p>入住密式小木屋，在房內眺出就可以將泰安山景盡收眼底，房內沒有多餘的擺設，可以讓您完全的沉靜下來，靜下心來看本書，或者只是單純的想事情，等您發現時，夕陽已經染紅了整片山頭。</p>
 								<p>就算不搭帳篷，也可以在平台上享受夜晚的寧靜，水聲潺潺流過，蟲鳴鳥叫貓頭鷹，銀河流星月亮，彷彿就在你耳邊低語。</p>
+								<p><span style="color: red">※ 木屋禁止攜帶寵物</span></p>
 							</div>
 						</div>
 					</section>
