chore(landingPage): update landing page

--- a/landing.html
+++ b/landing.html
@@ -103,7 +103,8 @@ nav-menu: true
 								<header class="major">
 									<h3>密式多肉小舖</h3>
 								</header>
-								<p></p>
+								<p>園區除了大量植栽外，處處也可見用多肉植物打造出的指尖綠意。</p>
+								<p>除了提供植栽現場販售，也可客訂組盆，另有 DIY 組盆教學，如有興趣可洽營主。</br><span style="color: #FFD306">適合年齡： 8 歲以上</span></p>
 							</div>
 						</div>
 					</section>
