chore(home): complete home page logic

--- a/sale_items.html
+++ b/sale_items.html
@@ -2,8 +2,8 @@
 title: 密式柑仔店
 landing-title: '密式柑仔店'
 nav-menu: true
-description: null
-image: null
+description: '密式旅行，歸於部落的小小商店'
+image: assets/images/sale_items.jpg
 author: null
 show_tile: true
 ---
