--- a/rooms.html
+++ b/rooms.html
@@ -21,13 +21,13 @@ show_tile: true
     <div id="main" class="alt">
       <div  class="inner">
         <header class="major">
-          <h1>{{ page.title }}</h1>
+          <h1 class="font-title">{{ page.title }}</h1>
         </header>
         <div class="container-fluid">
           <div class="row">
             {% for room in site.rooms %}
               <div class="col-12 col-md-6 p-3">
-                <div class="rounded list-item" style="border: 3px solid #dee2e6">
+                <div class="rounded list-item">
                   <h2 class="text-center mb-0 p-2">{{ room.title }}</h2>
                   <span class="image"><img src="{{ site.baseurl }}/{{ room.main_image }}" alt=""></span>
                   <div class="container-fluid">
