--- a/rooms.html
+++ b/rooms.html
@@ -27,32 +27,34 @@ show_tile: true
           <div class="row">
             {% for room in site.rooms %}
               <div class="col-12 col-md-6 p-3">
-                <div class="rounded list-item">
-                  <h2 class="text-center mb-0 p-2">{{ room.title }}</h2>
-                  <span class="image"><img src="{{ site.baseurl }}/{{ room.main_image }}" alt=""></span>
-                  <div class="container-fluid">
-                    <div class="row">
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#128081; 訂價：{{ room.standard_price }}
-                      </div>
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#129351; 連假：{{ room.standard_price }}
-                      </div>
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#129352; 假日：{{ room.holiday_price }}
-                      </div>
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#129353; 平日：{{ room.weekday_price }}
-                      </div>
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#127968; 房間總數：{{ room.number_of_rooms }}
-                      </div>
-                      <div class="col-12 col-lg-6 text-center font-lg">
-                        &#128101; 住房人數：{{ room.number_of_people }}
+                <a href="{{ room.url | absolute_url }}">
+                  <div class="rounded list-item">
+                    <h2 class="text-center mb-0 p-2">{{ room.title }}</h2>
+                    <span class="image"><img src="{{ site.baseurl }}/{{ room.main_image }}" alt=""></span>
+                    <div class="container-fluid">
+                      <div class="row">
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#128081; 訂價：{{ room.standard_price }}
+                        </div>
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#129351; 連假：{{ room.standard_price }}
+                        </div>
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#129352; 假日：{{ room.holiday_price }}
+                        </div>
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#129353; 平日：{{ room.weekday_price }}
+                        </div>
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#127968; 房間總數：{{ room.number_of_rooms }}
+                        </div>
+                        <div class="col-12 col-lg-6 text-center font-lg">
+                          &#128101; 住房人數：{{ room.number_of_people }}
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             {% endfor %}
           </div>
