chore(roomPage): create log_cabin_4 page

--- a/rooms.html
+++ b/rooms.html
@@ -46,10 +46,10 @@ show_tile: true
                           &#129353; 平日：{{ room.weekday_price }}
                         </div>
                         <div class="col-12 col-lg-6 text-center font-lg">
-                          &#127968; 房間總數：{{ room.number_of_rooms }}
+                          &#127968; 房數：{{ room.number_of_rooms }}
                         </div>
                         <div class="col-12 col-lg-6 text-center font-lg">
-                          &#128101; 住房人數：{{ room.number_of_people }}
+                          &#128101; 人數：{{ room.number_of_people }}
                         </div>
                       </div>
                     </div>
