--- a/_infos/2022-10-06-guide.html
+++ b/_infos/2022-10-06-guide.html
@@ -16,9 +16,9 @@ image:
 </div>
 
 <div class="modal fade mt-5" id="guide_1" role="dialog" aria-labelledby="guide_1ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
     <h2>大湖路線</h2>
-    <div class="modal-container text-center">
+    <div class="text-center">
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
           <span class="image fit"><img src="{% link assets/images/guide_1_1.png %}" alt=""></span>
@@ -114,7 +114,7 @@ image:
           <span class="image fit"><img src="{% link assets/images/guide_1_11.jpeg %}" alt=""></span>
         </div>
         <div class="col-12 col-md-4">
-          <p></p>
+          <p>沿途經過此岔路請繼續直行，沿著主要幹道開</p>
         </div>
       </div>
       <div class="row align-items-center">
@@ -132,9 +132,9 @@ image:
 </div>
 
 <div class="modal fade mt-5" id="guide_2" role="dialog" aria-labelledby="guide_2ModalLabel">
-  <div class="modal-dialog text-center" role="document" style="max-width: 960px;">
+  <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
     <h2>豆腐街路線</h2>
-    <div class="modal-container text-center">
+    <div class="text-center">
       <div class="row align-items-center">
         <div class="col-12 col-md-8">
           <span class="image fit"><img src="{% link assets/images/guide_2_1.png %}" alt=""></span>
