chore(home): adjust home page tiles logic

--- a/sale_items.html
+++ b/sale_items.html
@@ -2,10 +2,11 @@
 title: 密式柑仔店
 landing-title: '密式柑仔店'
 nav-menu: true
-description: '密式旅行，歸於部落的小小商店'
+description: '密式旅行，歸於部落的商戶'
 image: assets/images/sale_items.jpg
 author: null
 show_tile: true
+order: 2
 ---
 
 <!DOCTYPE html>
