chore(home): update home page

--- a/landing.html
+++ b/landing.html
@@ -1,6 +1,6 @@
 ---
 title: 關於密式
-description: '密式旅行，屬於你的秘密景點'
+description: '密式旅行，屬於你的景點'
 image: assets/images/landing_banner.jpg
 nav-menu: true
 order: 0
