chore(galleryPage): create gallery page

--- a/announcements.html
+++ b/announcements.html
@@ -1,5 +1,4 @@
 ---
-layout: page
 title: 最新消息
 landing-title: '最新消息'
 nav-menu: true
@@ -9,3 +8,29 @@ author: null
 show_tile: true
 order: 3
 ---
+
+<!DOCTYPE html>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  {% include head.html %}
+  <body>
+    {% include header.html %} 
+    <div id="main" class="alt">
+      <section id="one">
+        <div class="inner">
+          <header class="major">
+            <h1>{{ page.title }}</h1>
+          </header>
+          <div style="min-height: 500px;">
+            目前沒有最新消息 ...
+          </div>
+        </div>
+      </section>
+    </div>
+    {% include footer.html %}
+  </body>
+</html>
