--- a/sale_items.html
+++ b/sale_items.html
@@ -103,7 +103,7 @@ order: 2
 
           <div class="modal fade mt-5" id="sale_item_3" role="dialog" aria-labelledby="sale_item_3ModalLabel">
             <div class="modal-dialog text-center modal-container" role="document" style="max-width: 960px;">
-              <div class="modal-content"></div>
+              <div class="modal-content">
                 <div class="modal-header">
                   <h1>寢具組合</h1>
                 </div>
