chore(landing): update landing page

--- a/landing.html
+++ b/landing.html
@@ -41,7 +41,7 @@ order: 0
 				<section id="two" class="spotlights">
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_1.jpg %}" alt="" data-position="center center" />
+							<img src="{% link assets/images/landing/landing_img_1.jpg %}" alt="" data-position="center center" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -55,7 +55,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_2.jpg %}" alt="" data-position="top center" />
+							<img src="{% link assets/images/landing/landing_img_2.jpg %}" alt="" data-position="top center" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -68,7 +68,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_3.jpg %}" alt="" data-position="25% 25%" />
+							<img src="{% link assets/images/landing/landing_img_3.jpg %}" alt="" data-position="25% 25%" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -82,7 +82,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_4.jpeg %}" alt="" data-position="top center" />
+							<img src="{% link assets/images/landing/landing_img_4.jpeg %}" alt="" data-position="top center" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -96,7 +96,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_5.jpg %}" alt="" data-position="25% 25%" />
+							<img src="{% link assets/images/landing/landing_img_5.jpg %}" alt="" data-position="25% 25%" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -110,7 +110,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing_img_6.jpg %}" alt="" data-position="top center" />
+							<img src="{% link assets/images/landing/landing_img_6.jpg %}" alt="" data-position="top center" />
 						</span>
 						<div class="content">
 							<div class="inner">
@@ -134,6 +134,21 @@ order: 0
 								<div>密式園區內栽種大量植栽、季節水果</div>
 								<div>來到密式的旅客可以摘取成熟的果實就地享用，享受季節及自然的饋贈</div>
 								<div class="yellow">※ 採摘的水果、作物禁止外帶</div>
+							</div>
+						</div>
+					</section>
+					<section>
+						<span class="image">
+							<img src="{% link assets/images/landing/landing_img_8.jpg %}" alt="" data-position="top center" />
+						</span>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h2>密式書櫃</h2>
+								</header>
+								<div>密式書櫃由老板的少年時代所組成，飽含了老板少年時期的回憶</div>
+								<div>在這裡可以品味一下來自九零年代的少年情懷</div>
+								<div><span style="color: #FFD306">適合年齡： 6 歲以上</span></div>
 							</div>
 						</div>
 					</section>
