chore(page): update page info

--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@ order: 0
 								<header class="major">
 									<h2>密式小木屋</h2>
 								</header>
-								<div>入住密式小木屋，在房內眺出就可以將泰安山景盡收眼底，房內沒有多餘的擺設，可以讓您完全的沉靜下來，靜下心來看本書，或者只是單純的想事情，等您發現時，夕陽已經染紅了整片山頭。</br>就算不搭帳篷，也可以在平台上享受夜晚的寧靜，水聲潺潺流過，蟲鳴鳥叫貓頭鷹，銀河流星月亮，彷彿就在你耳邊低語。</div>
+								<div>入住密式小木屋，在房內眺出就可以將泰安山景盡收眼底，靜下心來看本書，淨空您的思想，等您發現時，夕陽已經染紅了整片山頭。曠野徐徐微風，小溪水聲潺潺，蟲鳴鳥叫蛙鳴，銀河流星月亮，自然彷彿就在你耳邊低語。</div>
 								<div class="yellow">※ 木屋禁止攜帶寵物</div>
 							</div>
 						</div>
