--- a/rooms.html
+++ b/rooms.html
@@ -2,7 +2,7 @@
 title: 房型展示
 landing-title: '房型展示'
 nav-menu: true
-description: 密式旅行，位於群山的住宿
+description: 密式旅行，位於群山的處所
 image: assets/images/rooms.jpg
 author: null
 show_tile: true
