--- a/announcements.html
+++ b/announcements.html
@@ -23,11 +23,27 @@ order: 3
     <div id="main" class="alt">
       <section id="one">
         <div class="inner">
-          <header class="major">
-            <h1>{{ page.title }}</h1>
-          </header>
-          <div style="min-height: 500px;">
-            目前沒有最新消息 ...
+          <div class="jumbotron p-3 rounded">
+            <header class="major">
+              <h1 class="display-4">{{ page.title }}</h1>
+            </header>
+          </div>
+          <div class="row mb-2">
+            {% for announcement in site.announcements %}
+              <div class="col-12 col-xl-6">
+                <div class="card list-item flex-md-row mb-4 box-shadow h-md-250">
+                  <div class="card-body d-flex flex-column">
+                    <h3 class="mb-0">{{ announcement.title }}</h3>
+                    <p class="card-text mb-auto font-sm">{{ announcement.description }}</p>
+                    <div class="mb-1 text-muted font-xxs">{{ announcement.datetime }}</div>
+                    <a href="{{ announcement.url }}" class="button special small">
+                      前往查看
+                    </a>
+                  </div>
+                  <img class="card-img-right flex-auto d-none d-md-block fit" alt="" style="width: 200px; height: 250px;" src="{{ announcement.image }}">
+                </div>
+              </div>
+            {% endfor %}
           </div>
         </div>
       </section>
