chore(announcement): create first announcement page

--- a/_announcements/2022-10-09-website.html
+++ b/_announcements/2022-10-09-website.html
@@ -7,3 +7,18 @@ description: "由老板親自操刀設計、編寫的官方網站即將於近日
 tags: ["公告", "網站"]
 image: https://drive.google.com/uc?id=1rdmJdMuwbcBxCYrwJyJ5PpjGBAjtKGpl
 ---
+
+<h3>密式旅行官網初次亮相</h3>
+<p>
+  營主手工打造，全新的密式旅行官網</br>
+  使用了部分營主沒有使用的過的工具</br>
+  但是最後還是完成了這個艱鉅的任務</br>
+  </br>
+  眾多親朋好友反應的讀取速度問題老板已經開始著手解決</br>
+  在完成之前再請大家多多擔待</br>
+  </br>
+  後續的密式消息將有可能改為不定時發佈在這裡</br>
+  也可能會有些營主製作網頁無聊小玩物喔</br>
+  再請各位敬請期待 &#127775;
+</p>
+
