chore(resource): adjust home page related image resource url

--- a/announcements.html
+++ b/announcements.html
@@ -4,7 +4,7 @@ meta_title: '密式旅行露營區，密式最新消息'
 landing-title: '最新消息'
 nav-menu: true
 description: 密式旅行，自於群山的聲音
-image: assets/images/announcements.jpg
+image: https://drive.google.com/uc?id=1YUqMvi0Pkaemo3nT6S17_umPaGZMZviS
 author: null
 show_tile: true
 order: 3
