--- a/galleries.html
+++ b/galleries.html
@@ -4,7 +4,7 @@ meta_title: '密式旅行露營區，密式圖集'
 landing-title: '密式圖集'
 nav-menu: true
 description: 密式旅行，之於心中的記憶
-image: assets/images/galleries.jpg
+image: https://drive.google.com/uc?id=1oITWV6eHfJWBJ0luc0DFUQ5ndxOsrjiD
 author: null
 show_tile: true
 order: 4
