--- a/rooms.html
+++ b/rooms.html
@@ -4,7 +4,7 @@ meta_title: '密式旅行露營區，房型展示'
 landing-title: '房型展示'
 nav-menu: true
 description: 密式旅行，位於群山的處所
-image: assets/images/rooms.jpg
+image: https://drive.google.com/uc?id=1uT7j-vFXoNVud0T4Gvx8KujhM9CNOmAK
 author: null
 show_tile: true
 order: 1
