chore(hoom): adjust tiles image logic

--- a/sale_items.html
+++ b/sale_items.html
@@ -4,7 +4,7 @@ meta_title: '密式旅行露營區，密式柑仔店'
 landing-title: '密式柑仔店'
 nav-menu: true
 description: '密式旅行，歸於部落的商戶'
-image: https://drive.google.com/uc?id=1yNrO-7jhmP6fbJkrzy9Fl3ARrqRLRW3A
+image: assets/images/sale_items.jpg
 author: null
 show_tile: true
 order: 2
