--- a/landing.html
+++ b/landing.html
@@ -2,7 +2,7 @@
 title: 關於密式
 meta_title: '密式旅行露營區，關於密式'
 description: '密式旅行，屬於你的景點'
-image: https://drive.google.com/uc?id=1CIR9csSESxT63_3Tg2i4pVEwyfeKuDr4
+image: assets/images/landing_banner.jpg
 nav-menu: true
 order: 0
 ---
