chore(image): adjust ladning images

--- a/landing.html
+++ b/landing.html
@@ -83,7 +83,7 @@ order: 0
 					</section>
 					<section>
 						<span class="image">
-							<img src="{% link assets/images/landing/landing_img_4.jpeg %}" alt="" data-position="top center" />
+							<img src="{% link assets/images/landing/landing_img_4.jpg %}" alt="" data-position="top center" />
 						</span>
 						<div class="content">
 							<div class="inner">
